eks/frontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reactjs-app-deployment
  namespace: frontend-namespace
  annotations:
    # reloader.stakater.com/auto: "true"
    configmap.reloader.stakater.com/reload: "reactjsapp-config"
    argocd.argoproj.io/sync-wave: "1" # Apply after db and backend
  labels:
    app: reactjs-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: reactjs-app
  template:
    metadata:
      labels:
        app: reactjs-app
    spec:
      containers:
        - name: reactjs-app-container
          image: 033849514070.dkr.ecr.ap-south-1.amazonaws.com/frontend/dummy-frontend-app:19136436135
          imagePullPolicy: Always
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: reactjs-app-service
  namespace: frontend-namespace
  labels:
    app: reactjs-app
spec:
  type: ClusterIP
  selector:
    app: reactjs-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80

---
# kind: ConfigMap
# apiVersion: v1
# metadata:
#   name: reactjsapp-config
#   namespace: frontend-namespace
# data:
#   VITE_API_URL: http://api.localhost
